--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/cannon": "6.6.0",
+    "@react-three/drei": "9.93.0",
+    "@react-three/fiber": "8.15.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "0.160.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -21,6 +25,12 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "standard": "^17.1.0",
     "vite": "^5.0.8"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
